Add transformer version to SentenceClassifier

--- a/MergerSentence.ipynb
+++ b/MergerSentence.ipynb
@@ -10,7 +10,7 @@
     "from nltk.tokenize import sent_tokenize\n",
     "\n",
     "from lib.util.embedding_data_loader import EmbeddingDataLoader\n",
-    "from lib.model.sentence_classifer import SentenceEmbeddingClassifier\n",
+    "from lib.model.sentence_classifer import SentenceLSTMClassifier, SentenceTransClassifier\n",
     "from lib.config.config_loader import ConfigLoader\n",
     "\n",
     "import torch\n",
@@ -32,6 +32,14 @@
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "strategy = \"LSTM\"",
+   "id": "853cace6472ce16f"
   },
   {
    "metadata": {},
@@ -234,9 +242,12 @@
     "\n",
     "#for model_name in ['GraphClassifier', 'GraphResidualClassifier', 'GraphLSTMClassifier']: #, 'GraphTransClassifier'\n",
     "\n",
-    "model = SentenceEmbeddingClassifier(input_dim=input_dim, fc1_dim=hidden_dim_1, fc2_dim=hidden_dim_2, lstm_hidden_dim=hidden_dim_3, output_dim=2).to(device)\n",
+    "if strategy == \"LSTM\":\n",
+    "    model = SentenceLSTMClassifier(input_dim=input_dim, fc1_dim=hidden_dim_1, fc2_dim=hidden_dim_2, lstm_hidden_dim=hidden_dim_3, output_dim=2).to(device)\n",
+    "elif strategy == \"SentenceTrans\":\n",
+    "    model = SentenceTransClassifier(input_dim=input_dim, fc1_dim=hidden_dim_1, fc2_dim=hidden_dim_2, transformer_hidden_dim=hidden_dim_3, output_dim=2).to(device)\n",
     "\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.0002)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.0005)\n",
     "criterion = nn.CrossEntropyLoss(weight=class_weights)"
    ],
    "id": "438125382aa9c75b",
@@ -282,7 +293,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": "result_df.to_csv('./outputs/SentenceClassifer_LSTM_results.csv', index=False)",
    "id": "51d7c4ce88767221",
    "outputs": [],
    "execution_count": null
