--- a/wf_approach.ipynb
+++ b/wf_approach.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:39:55.155356Z",
-     "start_time": "2025-06-21T14:39:54.094391Z"
+     "end_time": "2025-07-02T11:20:42.499625Z",
+     "start_time": "2025-07-02T11:20:41.706023Z"
     }
    },
    "source": [
@@ -15,6 +15,7 @@
     "import json\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "from tqdm import tqdm\n",
@@ -36,7 +37,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /home/cagatay/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -45,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:40:02.758136Z",
-     "start_time": "2025-06-21T14:40:02.755622Z"
+     "end_time": "2025-07-02T11:20:42.582658Z",
+     "start_time": "2025-07-02T11:20:42.580618Z"
     }
    },
    "cell_type": "code",
@@ -63,14 +64,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:48:42.229788Z",
-     "start_time": "2025-06-21T14:48:41.922592Z"
+     "end_time": "2025-07-02T11:20:43.113941Z",
+     "start_time": "2025-07-02T11:20:42.635502Z"
     }
    },
    "cell_type": "code",
    "source": [
     "train_data = cursor.execute(\n",
-    "    \"SELECT sentences, label FROM embeddings WHERE filing_date < '2019-01-01';\"\n",
+    "    \"SELECT sentences, label FROM embeddings WHERE filing_date < '2020-01-01';\"\n",
     ").fetchall()\n",
     "\n",
     "test_data = cursor.execute(\n",
@@ -79,13 +80,13 @@
    ],
    "id": "71e5a6d3141dd21e",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:48:43.530982Z",
-     "start_time": "2025-06-21T14:48:42.845208Z"
+     "end_time": "2025-07-02T11:20:43.915269Z",
+     "start_time": "2025-07-02T11:20:43.121897Z"
     }
    },
    "cell_type": "code",
@@ -95,13 +96,13 @@
    ],
    "id": "a8c84f44a3aa6746",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:48:43.735292Z",
-     "start_time": "2025-06-21T14:48:43.543006Z"
+     "end_time": "2025-07-02T11:20:44.147395Z",
+     "start_time": "2025-07-02T11:20:43.923913Z"
     }
    },
    "cell_type": "code",
@@ -111,13 +112,13 @@
    ],
    "id": "e9f950700c58505",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:48:43.879916Z",
-     "start_time": "2025-06-21T14:48:43.874722Z"
+     "end_time": "2025-07-02T11:20:44.157745Z",
+     "start_time": "2025-07-02T11:20:44.155393Z"
     }
    },
    "cell_type": "code",
@@ -133,13 +134,13 @@
    ],
    "id": "d38022ebbfbce89b",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:48:57.201041Z",
-     "start_time": "2025-06-21T14:48:44.297428Z"
+     "end_time": "2025-07-02T11:20:57.553382Z",
+     "start_time": "2025-07-02T11:20:44.205286Z"
     }
    },
    "cell_type": "code",
@@ -149,13 +150,13 @@
    ],
    "id": "960b8aa8a56ae905",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:49:32.406738Z",
-     "start_time": "2025-06-21T14:48:57.211Z"
+     "end_time": "2025-07-02T11:21:35.216232Z",
+     "start_time": "2025-07-02T11:20:57.561337Z"
     }
    },
    "cell_type": "code",
@@ -174,13 +175,13 @@
    ],
    "id": "7ad4849c56fc4e94",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:50:30.967357Z",
-     "start_time": "2025-06-21T14:50:25.828835Z"
+     "end_time": "2025-07-02T11:21:40.675717Z",
+     "start_time": "2025-07-02T11:21:35.227139Z"
     }
    },
    "cell_type": "code",
@@ -209,24 +210,38 @@
      "output_type": "stream",
      "text": [
       "=== Logistic Regression ===\n",
-      "Accuracy:        0.7702044790652386\n",
-      "Precision:       0.1897810218978102\n",
-      "Recall:          0.17218543046357615\n",
-      "F1-score:        0.18055555555555555\n",
-      "TP: 26.000\n",
-      "TN: 765.000\n",
-      "FP: 111.000\n",
-      "FN: 125.000\n"
+      "Accuracy:        0.7964946445959105\n",
+      "Precision:       0.23148148148148148\n",
+      "Recall:          0.16556291390728478\n",
+      "F1-score:        0.19305019305019305\n",
+      "TP: 25.000\n",
+      "TN: 793.000\n",
+      "FP: 83.000\n",
+      "FN: 126.000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cagatay/.cache/pypoetry/virtualenvs/mergergraphnet-5CuCFj11-py3.12/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T15:03:37.524661Z",
-     "start_time": "2025-06-21T15:03:37.517935Z"
+     "end_time": "2025-07-02T11:21:40.692807Z",
+     "start_time": "2025-07-02T11:21:40.686990Z"
     }
    },
    "cell_type": "code",
@@ -256,46 +271,38 @@
      "output_type": "stream",
      "text": [
       "Top 10 pozitife dönen n-gram’lar (label=1 lehine):\n",
-      "  balance sheet        coef = 0.2551\n",
-      "  estate               coef = 0.2311\n",
-      "  actual results       coef = 0.2290\n",
-      "  weighted average     coef = 0.1677\n",
-      "  forward looking      coef = 0.1587\n",
-      "  directors            coef = 0.1556\n",
-      "  revolving credit     coef = 0.1434\n",
-      "  discontinued         coef = 0.1338\n",
-      "  equivalents          coef = 0.1230\n",
-      "  next                 coef = 0.1202\n",
+      "  balance sheet        coef = 0.2770\n",
+      "  estate               coef = 0.1999\n",
+      "  weighted average     coef = 0.1892\n",
+      "  actual results       coef = 0.1867\n",
+      "  equivalents          coef = 0.1647\n",
+      "  either               coef = 0.1369\n",
+      "  directors            coef = 0.1125\n",
+      "  cash flow            coef = 0.1073\n",
+      "  forward looking      coef = 0.0936\n",
+      "  next                 coef = 0.0930\n",
       "\n",
       "Top 10 negatife dönen n-gram’lar (label=0 lehine):\n",
-      "  sheet                coef = -0.2445\n",
-      "  real estate          coef = -0.2337\n",
-      "  board directors      coef = -0.2184\n",
-      "  looking              coef = -0.1659\n",
-      "  numbers              coef = -0.1627\n",
-      "  weighted             coef = -0.1518\n",
-      "  flow                 coef = -0.1478\n",
-      "  working capital      coef = -0.1465\n",
-      "  discontinued operations coef = -0.1331\n",
-      "  characters           coef = -0.1308\n"
+      "  sheet                coef = -0.2658\n",
+      "  real estate          coef = -0.2371\n",
+      "  weighted             coef = -0.1636\n",
+      "  board directors      coef = -0.1508\n",
+      "  cash equivalents     coef = -0.1423\n",
+      "  characters           coef = -0.1355\n",
+      "  numbers              coef = -0.1281\n",
+      "  looking              coef = -0.1255\n",
+      "  flow                 coef = -0.1254\n",
+      "  accrued              coef = -0.1013\n"
      ]
     }
    ],
-   "execution_count": 42
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "52c3df2682f12852"
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-21T14:55:56.033228Z",
-     "start_time": "2025-06-21T14:55:55.691064Z"
+     "end_time": "2025-07-02T11:21:41.077268Z",
+     "start_time": "2025-07-02T11:21:40.738812Z"
     }
    },
    "cell_type": "code",
@@ -310,12 +317,16 @@
     "y_pred_rf  = rf.predict(X_test)\n",
     "y_proba_rf = rf.predict_proba(X_test)[:,1]\n",
     "\n",
-    "print(\"=== Random Forest ===\")\n",
+    "print(\"=== Random Forest Regression ===\")\n",
     "print(\"Accuracy:       \", accuracy_score(y_test, y_pred_rf))\n",
     "print(\"Precision:      \", precision_score(y_test, y_pred_rf))\n",
     "print(\"Recall:         \", recall_score(y_test, y_pred_rf))\n",
     "print(\"F1-score:       \", f1_score(y_test, y_pred_rf))\n",
-    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_rf))"
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred_rf).ravel()\n",
+    "print(\"TP: {:.3f}\".format(tp))\n",
+    "print(\"TN: {:.3f}\".format(tn))\n",
+    "print(\"FP: {:.3f}\".format(fp))\n",
+    "print(\"FN: {:.3f}\".format(fn))"
    ],
    "id": "5e17bb36ddd41ad3",
    "outputs": [
@@ -323,26 +334,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Random Forest ===\n",
-      "Accuracy:        0.8422590068159689\n",
-      "Precision:       0.28\n",
-      "Recall:          0.046357615894039736\n",
-      "F1-score:        0.07954545454545454\n",
-      "Confusion Matrix:\n",
-      " [[858  18]\n",
-      " [144   7]]\n"
+      "=== Random Forest Regression ===\n",
+      "Accuracy:        0.8364167478091529\n",
+      "Precision:       0.2571428571428571\n",
+      "Recall:          0.059602649006622516\n",
+      "F1-score:        0.0967741935483871\n",
+      "TP: 9.000\n",
+      "TN: 850.000\n",
+      "FP: 26.000\n",
+      "FN: 142.000\n"
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-02T11:21:45.049078Z",
+     "start_time": "2025-07-02T11:21:41.088270Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred_knn = knn.predict(X_test)\n",
+    "y_proba_knn = knn.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "print(\"=== KNN Regression ===\")\n",
+    "print(\"Accuracy:       \", accuracy_score(y_test, y_pred_knn))\n",
+    "print(\"Precision:      \", precision_score(y_test, y_pred_knn))\n",
+    "print(\"Recall:         \", recall_score(y_test, y_pred_knn))\n",
+    "print(\"F1-score:       \", f1_score(y_test, y_pred_knn))\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred_knn).ravel()\n",
+    "print(\"TP: {:.3f}\".format(tp))\n",
+    "print(\"TN: {:.3f}\".format(tn))\n",
+    "print(\"FP: {:.3f}\".format(fp))\n",
+    "print(\"FN: {:.3f}\".format(fn))\n"
+   ],
+   "id": "e508b080285f14a1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== KNN Regression ===\n",
+      "Accuracy:        0.7867575462512172\n",
+      "Precision:       0.19090909090909092\n",
+      "Recall:          0.1390728476821192\n",
+      "F1-score:        0.16091954022988506\n",
+      "TP: 21.000\n",
+      "TN: 787.000\n",
+      "FP: 89.000\n",
+      "FN: 130.000\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-02T11:21:45.114667Z",
+     "start_time": "2025-07-02T11:21:45.112695Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "b6f3875405f587b"
+   "id": "141874df9d11153b",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
