--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T07:58:08.404236Z",
-     "start_time": "2025-06-19T07:58:07.479757Z"
+     "end_time": "2025-07-02T11:59:59.236940Z",
+     "start_time": "2025-07-02T11:59:58.659395Z"
     }
    },
    "cell_type": "code",
@@ -15,6 +15,8 @@
     "from gensim.models import Word2Vec\n",
     "from gensim.utils import simple_preprocess\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "from tqdm import tqdm"
@@ -26,8 +28,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T07:58:08.421752Z",
-     "start_time": "2025-06-19T07:58:08.418434Z"
+     "end_time": "2025-07-02T11:59:59.308193Z",
+     "start_time": "2025-07-02T11:59:59.306405Z"
     }
    },
    "cell_type": "code",
@@ -44,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T07:58:10.626935Z",
-     "start_time": "2025-06-19T07:58:09.368730Z"
+     "end_time": "2025-07-02T12:00:00.089469Z",
+     "start_time": "2025-07-02T11:59:59.358685Z"
     }
    },
    "cell_type": "code",
@@ -65,98 +67,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T07:58:39.162665Z",
-     "start_time": "2025-06-19T07:58:39.159085Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "num_merge = sum([y for x, y in train_data])",
-   "id": "1c25bf9426a306d4",
-   "outputs": [],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-19T07:58:44.455132Z",
-     "start_time": "2025-06-19T07:58:44.449593Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "num_merge",
-   "id": "a879788a25dc74be",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1339"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-19T07:58:57.962049Z",
-     "start_time": "2025-06-19T07:58:57.959726Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "num_not_merge = len(train_data) - num_merge",
-   "id": "3ff5dfa5f96952e2",
-   "outputs": [],
-   "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-19T07:59:08.166455Z",
-     "start_time": "2025-06-19T07:59:08.162634Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "num_not_merge",
-   "id": "1dd7001ef6fcd0ea",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6539"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 8
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:20:40.791713Z",
-     "start_time": "2025-06-18T14:20:40.789468Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# train_data = train_data[:100]\n",
-    "# test_data = test_data[:10]"
-   ],
-   "id": "b381eacac1b47702",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:20:41.639922Z",
-     "start_time": "2025-06-18T14:20:40.839918Z"
+     "end_time": "2025-07-02T12:00:00.967335Z",
+     "start_time": "2025-07-02T12:00:00.096342Z"
     }
    },
    "cell_type": "code",
@@ -166,13 +78,13 @@
    ],
    "id": "49813f37f2069c39",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T14:21:33.555539Z",
-     "start_time": "2025-06-18T14:20:41.647469Z"
+     "end_time": "2025-07-02T12:00:53.016722Z",
+     "start_time": "2025-07-02T12:00:00.974530Z"
     }
    },
    "cell_type": "code",
@@ -186,13 +98,13 @@
    ],
    "id": "73f74e7303a90b17",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T14:24:10.161875Z",
-     "start_time": "2025-06-18T14:21:33.609917Z"
+     "end_time": "2025-07-02T12:03:26.576735Z",
+     "start_time": "2025-07-02T12:00:53.072719Z"
     }
    },
    "cell_type": "code",
@@ -208,13 +120,13 @@
    ],
    "id": "3c4e8cbdbbd5ba78",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T14:24:10.178832Z",
-     "start_time": "2025-06-18T14:24:10.175575Z"
+     "end_time": "2025-07-02T12:03:26.633215Z",
+     "start_time": "2025-07-02T12:03:26.629398Z"
     }
    },
    "cell_type": "code",
@@ -240,13 +152,13 @@
    ],
    "id": "5972052842055248",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T14:26:30.903865Z",
-     "start_time": "2025-06-18T14:24:10.228708Z"
+     "end_time": "2025-07-02T12:05:47.317756Z",
+     "start_time": "2025-07-02T12:03:26.679541Z"
     }
    },
    "cell_type": "code",
@@ -257,59 +169,128 @@
    ],
    "id": "644787e58cb357e1",
    "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-02T12:05:49.584084Z",
+     "start_time": "2025-07-02T12:05:47.327949Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# ---- Logistic Regression ----\n",
+    "lr = LogisticRegression(max_iter=1000, n_jobs=-1, random_state=42)\n",
+    "lr.fit(X_train, y_train)\n",
+    "y_pred_lr   = lr.predict(X_test)\n",
+    "y_proba_lr  = lr.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "print(\"=== Logistic Regression ===\")\n",
+    "print(\"Accuracy:       \", accuracy_score(y_test, y_pred_lr))\n",
+    "print(\"Precision:      \", precision_score(y_test, y_pred_lr))\n",
+    "print(\"Recall:         \", recall_score(y_test, y_pred_lr))\n",
+    "print(\"F1-score:       \", f1_score(y_test, y_pred_lr))\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred_lr).ravel()\n",
+    "print(\"TP: {:.3f}\".format(tp))\n",
+    "print(\"TN: {:.3f}\".format(tn))\n",
+    "print(\"FP: {:.3f}\".format(fp))\n",
+    "print(\"FN: {:.3f}\".format(fn))"
+   ],
+   "id": "d3774dc879abfa29",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Logistic Regression ===\n",
+      "Accuracy:        0.8529698149951315\n",
+      "Precision:       0.5\n",
+      "Recall:          0.039735099337748346\n",
+      "F1-score:        0.0736196319018405\n",
+      "TP: 6.000\n",
+      "TN: 870.000\n",
+      "FP: 6.000\n",
+      "FN: 145.000\n"
+     ]
+    }
+   ],
    "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T14:26:31.120854Z",
-     "start_time": "2025-06-18T14:26:30.912926Z"
+     "end_time": "2025-07-02T12:05:50.061770Z",
+     "start_time": "2025-07-02T12:05:49.631553Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# 5) Basit bir Logistic Regression sınıflayıcıyla eğitin ve test edin\n",
-    "clf = LogisticRegression(max_iter=1000)\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_pred = clf.predict(X_test)"
+    "rf = RandomForestClassifier(\n",
+    "    n_estimators=10,\n",
+    "    max_depth=None,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred_rf  = rf.predict(X_test)\n",
+    "y_proba_rf = rf.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "print(\"=== Random Forest Regression ===\")\n",
+    "print(\"Accuracy:       \", accuracy_score(y_test, y_pred_rf))\n",
+    "print(\"Precision:      \", precision_score(y_test, y_pred_rf))\n",
+    "print(\"Recall:         \", recall_score(y_test, y_pred_rf))\n",
+    "print(\"F1-score:       \", f1_score(y_test, y_pred_rf))\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred_rf).ravel()\n",
+    "print(\"TP: {:.3f}\".format(tp))\n",
+    "print(\"TN: {:.3f}\".format(tn))\n",
+    "print(\"FP: {:.3f}\".format(fp))\n",
+    "print(\"FN: {:.3f}\".format(fn))"
    ],
-   "id": "d3774dc879abfa29",
-   "outputs": [],
+   "id": "3c0161df868964d9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Random Forest Regression ===\n",
+      "Accuracy:        0.8412852969814996\n",
+      "Precision:       0.3\n",
+      "Recall:          0.059602649006622516\n",
+      "F1-score:        0.09944751381215469\n",
+      "TP: 9.000\n",
+      "TN: 855.000\n",
+      "FP: 21.000\n",
+      "FN: 142.000\n"
+     ]
+    }
+   ],
    "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T14:26:31.145795Z",
-     "start_time": "2025-06-18T14:26:31.137343Z"
+     "end_time": "2025-07-02T12:05:50.360242Z",
+     "start_time": "2025-07-02T12:05:50.074027Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "acc = accuracy_score(y_test, y_pred)\n",
-    "prec = precision_score(y_test, y_pred)\n",
-    "rec = recall_score(y_test, y_pred)\n",
-    "f1 = f1_score(y_test, y_pred)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred_knn = knn.predict(X_test)\n",
+    "y_proba_knn = knn.predict_proba(X_test)[:,1]\n",
     "\n",
-    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()"
-   ],
-   "id": "3c0161df868964d9",
-   "outputs": [],
-   "execution_count": 11
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:26:31.198034Z",
-     "start_time": "2025-06-18T14:26:31.193479Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "print(\"Accuracy: {:.3f}\".format(acc))\n",
-    "print(\"Precision: {:.3f}\".format(prec))\n",
-    "print(\"Recall: {:.3f}\".format(rec))\n",
-    "print(\"F1: {:.3f}\".format(f1))"
+    "print(\"=== KNN Regression ===\")\n",
+    "print(\"Accuracy:       \", accuracy_score(y_test, y_pred_knn))\n",
+    "print(\"Precision:      \", precision_score(y_test, y_pred_knn))\n",
+    "print(\"Recall:         \", recall_score(y_test, y_pred_knn))\n",
+    "print(\"F1-score:       \", f1_score(y_test, y_pred_knn))\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred_knn).ravel()\n",
+    "print(\"TP: {:.3f}\".format(tp))\n",
+    "print(\"TN: {:.3f}\".format(tn))\n",
+    "print(\"FP: {:.3f}\".format(fp))\n",
+    "print(\"FN: {:.3f}\".format(fn))\n"
    ],
    "id": "a54bf87b0d3d7b96",
    "outputs": [
@@ -317,159 +298,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.851\n",
-      "Precision: 0.429\n",
-      "Recall: 0.040\n",
-      "F1: 0.073\n"
+      "=== KNN Regression ===\n",
+      "Accuracy:        0.7877312560856865\n",
+      "Precision:       0.2184873949579832\n",
+      "Recall:          0.17218543046357615\n",
+      "F1-score:        0.1925925925925926\n",
+      "TP: 26.000\n",
+      "TN: 783.000\n",
+      "FP: 93.000\n",
+      "FN: 125.000\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T14:26:31.244178Z",
-     "start_time": "2025-06-18T14:26:31.242085Z"
+     "end_time": "2025-07-02T12:05:50.374520Z",
+     "start_time": "2025-07-02T12:05:50.373226Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "print(\"TP: {:.3f}\".format(tp))\n",
-    "print(\"TN: {:.3f}\".format(tn))\n",
-    "print(\"FP: {:.3f}\".format(fp))\n",
-    "print(\"FN: {:.3f}\".format(fn))"
-   ],
-   "id": "7c1d067cdfb4b2fb",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TP: 6.000\n",
-      "TN: 868.000\n",
-      "FP: 8.000\n",
-      "FN: 145.000\n"
-     ]
-    }
-   ],
-   "execution_count": 13
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:33:42.140347Z",
-     "start_time": "2025-06-18T14:33:42.079422Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "from sklearn.ensemble import RandomForestClassifier",
-   "id": "c4176e3be4e244fc",
-   "outputs": [],
-   "execution_count": 14
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:35:14.001173Z",
-     "start_time": "2025-06-18T14:34:28.219317Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "clf = RandomForestClassifier(n_estimators=200)\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_pred = clf.predict(X_test)"
-   ],
-   "id": "5c076d800697b21b",
-   "outputs": [],
-   "execution_count": 15
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:35:14.065671Z",
-     "start_time": "2025-06-18T14:35:14.058584Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "acc = accuracy_score(y_test, y_pred)\n",
-    "prec = precision_score(y_test, y_pred)\n",
-    "rec = recall_score(y_test, y_pred)\n",
-    "f1 = f1_score(y_test, y_pred)\n",
-    "\n",
-    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()"
-   ],
-   "id": "9cd0fa0338357ae8",
-   "outputs": [],
-   "execution_count": 16
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:35:14.115479Z",
-     "start_time": "2025-06-18T14:35:14.113066Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "print(\"Accuracy: {:.3f}\".format(acc))\n",
-    "print(\"Precision: {:.3f}\".format(prec))\n",
-    "print(\"Recall: {:.3f}\".format(rec))\n",
-    "print(\"F1: {:.3f}\".format(f1))"
-   ],
-   "id": "d91ad996c6c273f1",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.852\n",
-      "Precision: 0.467\n",
-      "Recall: 0.046\n",
-      "F1: 0.084\n"
-     ]
-    }
-   ],
-   "execution_count": 17
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-18T14:35:14.173518Z",
-     "start_time": "2025-06-18T14:35:14.171536Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "print(\"TP: {:.3f}\".format(tp))\n",
-    "print(\"TN: {:.3f}\".format(tn))\n",
-    "print(\"FP: {:.3f}\".format(fp))\n",
-    "print(\"FN: {:.3f}\".format(fn))"
-   ],
-   "id": "4557fdb9169fc0a3",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TP: 7.000\n",
-      "TN: 868.000\n",
-      "FP: 8.000\n",
-      "FN: 144.000\n"
-     ]
-    }
-   ],
-   "execution_count": 18
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "82eb6f2a16c8873b"
+   "id": "82eb6f2a16c8873b",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
